# ooc-cholesky

./: .gitignore  CMakeLists.txt  Found  LICENSE  README.md  baseline_ieee_gu.out  fill_4class_matrix.out  ladder_full_gu_40k_nb4096.out  ladder_full_gu_missing.out  ladder_ieee_gu.out  mx_staircase_40k_nb4096_gu.out  mx_staircase_tile_gt20k.out  mx_staircase_vec1d32_gt20k.out  run_40k_catchup.sh  run_bound_ladder_vec1d32.sh  run_bound_ladder_vec1d32_fp16tile.sh  run_bound_sweep_20k.sh  run_fill_4class_matrix.sh  run_fill_baseline_and_ieee_gu.sh  run_ladder_ftz_tilemap_nb4096.sh  run_ladder_full_40k_nb4096_gu.sh  run_ladder_full_gu_40k_nb4096.sh  run_ladder_full_gu_missing.sh  run_ladder_ieee_gu.sh  run_ladder_rerun_32k.sh  run_mx_staircase_40k_nb4096_gu.sh  run_mx_staircase_tile_gt20k.sh  run_mx_staircase_vec1d32_gt20k.sh  run_mx_sweep.sh  run_mx_sweep_nohup.sh  run_precision_sweep_8192.sh  run_requant_baseline_fp8_gt20k.sh  run_requant_baseline_fp8_subnormal_gt20k.sh  run_requant_baseline_subnormal_chain.sh  run_requant_gt20k_by_bin.sh  run_requant_gt20k_master.sh  run_requant_gt20k_tile_by_bin.sh  run_requant_gt20k_tile_chain.sh  run_requant_ladder_block128_chain.sh  run_requant_ladder_scaled_block128_gt20k.sh  (+7 more)
baseline_ieee_gu/: results.csv
cmake/: force_cuda_dpotrf.cmake
compute/: castType.cu  cgebrd.c  cgecon.c  cgesdd.c  cgesvd.c  cheev.c  cheevd.c  cheevr.c  chegv.c  chegvd.c  cpocon.c  cstedc.c  dgebrd.c  dgecon.c  dgesdd.c  dgesvd.c  dpocon.c  dpotrf_gpu.c  dpotrf_gpu_dist.c  dpotrf_gpu_dist.cpp  dpotrf_gpu_dist_mixed_precision.cpp  dpotrf_hpcasia24.c  dpotrf_hpcasia24.cpp  dpotrf_mixed_precision.cpp  dsgesv.c  dsposv.c  dstedc.c  dsungesv.c  dsyev.c  dsyevd.c  dsyevr.c  dsygv.c  dsygvd.c  mx_wrapper.h  original_mixed_precision.cpp  pclarft_blgtrd.c  pcpltmg_house.c  pcswaps.c  pcunmqr_blgtrd.c  pdlaed0.c  (+45 more)
control/: allocate.h  auxiliary.c  auxiliary.h  check_cuda.h  common.h  compute_d.h  context.h  control.c  control.cpp  control.h  descriptor.c  dist.h  event.cpp  mixed_precision.h  pdtile.c  pdtile_dist.cpp  tile.h
core_blas/: core_cbrdalg1.c  core_cgbelr.c  core_cgblrx.c  core_cgbrce.c  core_cgbtype1cb.c  core_cgbtype2cb.c  core_cgbtype3cb.c  core_cgelqt.c  core_cgeqp3_init.c  core_cgeqp3_norms.c  core_cgeqp3_tntpiv.c  core_cgeqp3_update.c  core_cgeqrt.c  core_cgessm.c  core_cgessq.c  core_cgetf2_nopiv.c  core_cgetrf.c  core_cgetrf_incpiv.c  core_cgetrf_reclap.c  core_cgetrf_rectil.c  core_chbelr.c  core_chblrx.c  core_chbrce.c  core_chbtype1cb.c  core_chbtype2cb.c  core_chbtype3cb.c  core_chegst.c  core_cherfb.c  core_chessq.c  core_clacpy.c  core_clacpy_pivot.c  core_clange.c  core_clanhe.c  core_clansy.c  core_clantr.c  core_clarfx_tbrd.c  core_clarfy.c  core_clascl.c  core_claset.c  core_claset2.c  (+243 more)
core_blas-qwrapper/: qwrapper_cgetrf.c  qwrapper_chegst.c  qwrapper_clacpy.c  qwrapper_clange.c  qwrapper_clanhe.c  qwrapper_clansy.c  qwrapper_clantr.c  qwrapper_claset.c  qwrapper_claset2.c  qwrapper_claset_identity.c  qwrapper_claswp.c  qwrapper_clauum.c  qwrapper_cpotrf.c  qwrapper_cswap.c  qwrapper_ctrtri.c  qwrapper_dgetrf.c  qwrapper_dlacpy.c  qwrapper_dlaed3_computevectors.c  qwrapper_dlag2s.c  qwrapper_dlag2z.c  qwrapper_dlange.c  qwrapper_dlansy.c  qwrapper_dlantr.c  qwrapper_dlaset.c  qwrapper_dlaset2.c  qwrapper_dlaset_identity.c  qwrapper_dlaswp.c  qwrapper_dlauum.c  qwrapper_dpotrf.c  qwrapper_dswap.c  qwrapper_dsygst.c  qwrapper_dtrtri.c  qwrapper_sgetrf.c  qwrapper_slacpy.c  qwrapper_slaed3_computevectors.c  qwrapper_slag2c.c  qwrapper_slange.c  qwrapper_slansy.c  qwrapper_slantr.c  qwrapper_slaset.c  (+24 more)
examples/: 1_example_dpotrf_mixed_precision  2_example_dpotrf_mixed_precision  example_cgelqf.c  example_cgelqs.c  example_cgels.c  example_cgeqrf.c  example_cgeqrs.c  example_cgesv.c  example_cgetrs.c  example_cposv.c  example_cpotrf.c  example_cpotrs.c  example_ctrsm.c  example_ctrsmpl.c  example_cunmlq.c  example_cunmqr.c  example_dgelqf.c  example_dgelqs.c  example_dgels.c  example_dgeqrf.c  example_dgeqrs.c  example_dgesv.c  example_dgetrs.c  example_dormlq.c  example_dormqr.c  example_dposv.c  example_dpotrf.c  example_dpotrf_gpu  example_dpotrf_gpu.cpp  example_dpotrf_mixed_precision  example_dpotrf_mixed_precision.cpp  example_dpotrs.c  example_dtrsm.c  example_dtrsmpl.c  example_sgelqf.c  example_sgelqs.c  example_sgels.c  example_sgeqrf.c  example_sgeqrs.c  example_sgesv.c  (+26 more)
figures/: all_error_runs.csv  all_error_runs_ladder_only.csv  paper_memory_nb4096_sweep.tsv
fill_4class_matrix/: results.csv
include/: cblas.h  descriptor.h  plasma.h  plasma_d.h  plasma_d_mixed.h
ladder_full_gu_missing/: results.csv  results.post_deletion.csv
ladder_rerun_32k/: results.csv
mixed_kernels/: CMakeLists.txt  casting.cu  casting.h  gemm.cpp  mixed_kernels.h  syrk.cpp
mx_quant/: common.cuh  mx.cuh  mx_wrapper.cu  quantize.cuh  shared_exp.cuh  test_mx  test_mx.cu
mx_staircase_40k_nb4096_gu/: results.csv
mx_staircase_tile_gt20k/: results.csv
mx_staircase_vec1d32_gt20k/: results.csv
quark/: quark.c
tile_maps_ladder_ftz_nb4096/: index.tsv  ladder_ftz_N122880_nb4096_eps1e-5.tilemap  ladder_ftz_N122880_nb4096_eps1e-6.tilemap  ladder_ftz_N122880_nb4096_eps1e-7.tilemap  ladder_ftz_N122880_nb4096_eps1e-8.tilemap  ladder_ftz_N20480_nb4096_eps1e-5.tilemap  ladder_ftz_N20480_nb4096_eps1e-6.tilemap  ladder_ftz_N20480_nb4096_eps1e-7.tilemap  ladder_ftz_N20480_nb4096_eps1e-8.tilemap  ladder_ftz_N32768_nb4096_eps1e-5.tilemap  ladder_ftz_N32768_nb4096_eps1e-6.tilemap  ladder_ftz_N32768_nb4096_eps1e-7.tilemap  ladder_ftz_N32768_nb4096_eps1e-8.tilemap  ladder_ftz_N40960_nb4096_eps1e-5.tilemap  ladder_ftz_N40960_nb4096_eps1e-6.tilemap  ladder_ftz_N40960_nb4096_eps1e-7.tilemap  ladder_ftz_N40960_nb4096_eps1e-8.tilemap  ladder_ftz_N65536_nb4096_eps1e-5.tilemap  ladder_ftz_N65536_nb4096_eps1e-6.tilemap  ladder_ftz_N65536_nb4096_eps1e-7.tilemap  ladder_ftz_N65536_nb4096_eps1e-8.tilemap  ladder_ftz_N81920_nb4096_eps1e-5.tilemap  ladder_ftz_N81920_nb4096_eps1e-6.tilemap  ladder_ftz_N81920_nb4096_eps1e-7.tilemap  ladder_ftz_N81920_nb4096_eps1e-8.tilemap  (+4 more)
(+54 files in other folders)
